# OrmPP

./: ALL CODE  CMakeLists.txt  main.cpp  orm_mysql_generate
Linq/: IOperation.hpp  Linq.hpp
Linq/DatabaseComponent/includes/: Column.h  Condition.h  Sort.h  Table.h
Linq/DatabaseComponent/src/: Column.cpp  Condition.cpp  Sort.cpp  Table.cpp
Linq/includes/: Linq.h
Linq/includes/Interfaces/: IOperation.h  IOperationDelete.h  IOperationInsert.h  IOperationSelect.h  IOperationUpdate.h
MySQL/: CMakeLists.txt  IOperable.hpp  LinqMySQL.hpp  LinqOperation.hpp
MySQL/includes/: MySQLSelect.h
MySQL/src/: Condition.cpp  From.cpp  Join.cpp  Limit.cpp  MySQLSelect.cpp  Offset.cpp  OrderBy.cpp  Sort.cpp  Where.cpp
generate/: CMakeLists.txt  main.cpp
include/: Linq.h
include/LINQ/: Column.h  Errors.hpp  Sort.h  SqlQuery.hpp  Table.h  ToString.hpp
include/LINQ/components/: Column.h  Condition.h  Sort.h  SqlQuery.hpp  Table.h  TableController.hpp  ToString.hpp
include/LINQ/exception/: InvalidColumn.hpp  InvalidQuery.hpp
include/LINQ/inc/: Column.tpp  Select.tpp  TableController.tpp
include/LINQ/interface/: IFrom.h  IOrderBy.h  ISelect.h  IWhere.h
include/LINQ/query/: From.hpp  OrderBy.hpp  Select.hpp  Where.hpp
lib/etddb/: libetddb.so.0.0
lib/etddb/include/: etddb.hpp
lib/etddb/include/etddb/: Connector.hpp  IClient.hpp  ICursor.hpp  IQueryCollector.hpp  MySqlClient.hpp  MySqlCollector.hpp  MySqlCursor.hpp  TransactionFailed.hpp  etddb.hpp
orm/: CMakeLists.txt
orm/include/: orm.hpp
orm/include/orm/: Errors.hpp
orm/include/orm/components/: Column.hpp  Condition.hpp  Database.hpp  DatabaseController.hpp  Function.hpp  Sort.hpp  SqlQuery.hpp  Table.hpp  TableController.hpp  ToString.hpp
orm/include/orm/query/: From.hpp  Join.hpp  Limit.hpp  Offset.hpp  OrderBy.hpp  Select.hpp  Where.hpp
orm/include/orm/template_definition/: Column.tpp  Database.tpp  Function.tpp  Select.tpp  TableController.tpp
orm/src/: Database.cpp  DatabaseController.cpp  Errors.cpp  SqlQuery.cpp  Table.cpp  TableController.cpp  ToString.cpp
src/: Column.cpp  Condition.cpp  Errors.cpp  Sort.cpp  SqlQuery.cpp  Table.cpp  TableController.cpp  ToString.cpp
src/DDL/: From.cpp  OrderBy.cpp  Select.cpp  Where.cpp
src/MySQL/: From.cpp  OrderBy.cpp  Select.cpp  Where.cpp
